--- a/views/index.erb
+++ b/views/index.erb
@@ -5,12 +5,12 @@
     <input id="anagram" name="anagram" class="form-control" type="text">
   </div>
   <div class="form-group">
-    <label for="word2">What words do you want to compare.</label>
-    <input id="word2" name="word2" class="form-control" type="text">
+    <label for="comparison2">What words do you want to compare.</label>
+    <input id="comparison2" name="comparison2" class="form-control" type="text">
   </div>
   <div class="form-group">
-    <label for="word3">What words do you want to compare.</label>
-    <input id="word3" name="word3" class="form-control" type="text">
+    <label for="comparison3">What words do you want to compare.</label>
+    <input id="comparison3" name="comparison3" class="form-control" type="text">
   </div>
   <button type="submit" class="btn-success">Send</button>
 </form>
